Update styles.css fix alignment discos

--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,7 @@ main {
 .album {
   display: flex;
   align-items: center;
+  gap: 20px; /* Improved spacing */
   margin-bottom: 20px;
   border-bottom: 1px solid #ddd;
   padding-bottom: 20px;
@@ -137,11 +138,10 @@ main {
   width: 100%; /* Allow the image to shrink, but not grow beyond max-width */
   height: auto; /* Maintain aspect ratio */
   display: block;
-  margin-right: 20px; /* Space between the image and the text */
 }
 
 .album .details {
-  flex-grow: 1;
+  flex: 1; /* Ensures text takes up remaining space */
   text-align: left; /* Align text to the left of the image */
 }
 
